<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.abnamro.training</groupId>
        <artifactId>ocp-ch11</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <groupId>com.abnamro.training</groupId>
    <artifactId>developer-meetups</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>OCP CH11 Meetup</name>
    <description>Some example code for the OCP training for chapter 11</description>

    <properties>
        <java.source>11</java.source>
        <java.target>11</java.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.abnamro.training</groupId>
            <artifactId>developer-feeding</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-commons</artifactId>
            <version>1.7.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>

                <configuration>
<!--                    <argLine>&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</argLine>-->
                    <argLine>--add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.content.interfaces=org.junit.platform.commons --add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.content.interfaces=ALL-UNNAMED --add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.content.external=org.junit.platform.commons --add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.content.external=ALL-UNNAMED --add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.content.internal=org.junit.platform.commons --add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.content.internal=ALL-UNNAMED --add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.media=org.junit.platform.commons --add-opens com.abnamro.developer.meetups/com.abnamro.developer.meetups.media=ALL-UNNAMED --add-reads com.abnamro.developer.meetups=org.junit.jupiter.api --illegal-access=permit</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
